[package]
name = "callog_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "*"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros", "time"] }
futures = "*"
teloxide = { version = "0.7", features = ["macros", "auto-send"] }
envmnt = "^0.9.1"
dotenv = "*"